--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -31,8 +31,10 @@
             <ul class="study">
                 <li><a href="study/basic.html">기본 규칙</a></li>
                 <li><a href="study/operator.html">연산자</a></li>
-                <li><a href="study/for.html">for문</a></li>
+                <li><a href="study/for.html">반복문</a></li>
+                <li><a href="study/if.html">조건문</a></li>
             </ul>
+        </nav>
     </header>
     <!-- //header -->
 
@@ -53,8 +55,219 @@
                 <li><a href="#sample12">12. continue문</a></li>
             </ul>
         </div>
-        <div id="main_script"></div>
-        <div id="main_desc"></div>
+
+        <div id="main_sample">
+            <!-- 01 -->
+            <div id="sample01" class="sample">
+                <h3>1</h3>
+                <p>1</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample01_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 02 -->
+            <div id="sample02" class="sample">
+                <h3>2</h3>
+                <p>2</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample02_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 03 -->
+            <div id="sample03" class="sample">
+                <h3>3</h3>
+                <p>3</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample03_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 04 -->
+            <div id="sample04" class="sample">
+                <h3>4</h3>
+                <p>4</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample04_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 05 -->
+            <div id="sample05" class="sample">
+                <h3>5</h3>
+                <p>5</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample05_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 06 -->
+            <div id="sample06" class="sample">
+                <h3>6</h3>
+                <p>6</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample06_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 07 -->
+            <div id="sample07" class="sample">
+                <h3>7</h3>
+                <p>7</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample07_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 08 -->
+            <div id="sample08" class="sample">
+                <h3>8</h3>
+                <p>8</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample08_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 09 -->
+            <div id="sample09" class="sample">
+                <h3>9</h3>
+                <p>9</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample09_result"></div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 10 -->
+            <div id="sample10" class="sample">
+                <h3>10</h3>
+                <p>10</p>
+                <div class="script">
+<pre><code class="language.js">    if(0){
+        document.write("실행되었습니다(true).");
+    } else {
+        document.write("실행되었습니다(false).");
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample10_result"></div>
+                    </details>
+                </div>
+            </div>
+
+        </div>
     </main>
     <!-- //main -->
 
@@ -64,5 +277,135 @@
     <!-- //footer -->
     <script src="assets/css/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
+
+    <script>
+        // (제어문 : 조건문, 반복, 중지, 건너뛰기)
+        // 01. if문  
+        {
+            // false, 0, undefined, null 
+            // true, 1, "0", "1", 0<10, []배열, {}객체
+            if(0){
+                document.write("실행되었습니다(true).");
+            } else {
+                document.write("실행되었습니다(false).");
+            }
+        }
+
+        // 02. if문 생략
+        {
+            const num = 100;
+
+            if(num) document.write("실행되었습니다(true).");
+            else document.write("실행되었습니다(false).");
+            
+        }
+
+        // 03. 다중 if문
+        {
+            const num = 100;
+
+            if(num == 90) {
+                    document.write("실행되었습니다(num==90).");
+            }   else if(num == 100) {
+                    document.write("실행되었습니다(num==100).");
+            }   else if(num == 110) {
+                    document.write("실행되었습니다(num==110).");
+            }   else if(num == 120) {
+                    document.write("실행되었습니다(num==120).");
+            }   else {
+                    document.write("실행되었습니다(num==값이 없음).");
+            }
+        }
+
+        // 04. 중첩 if문
+        {
+            const num = 100;
+
+            if(num == 100) {
+                document.write("실행되었습니다.(1)");
+                if(num == 100){
+                    document.write("실행되었습니다.(2)");
+                    if(num == 100) {
+                        document.write("실행되었습니다.(3)");
+                    }
+                }
+            }   else {
+                document.write("실행되었습니다.(4)");
+            }
+        }
+
+        // 05. 조건부 연산자(삼항 연산자)
+        {
+            const num = 100;
+
+            // num의 값이 100이면 true출력하고 아니면 false출력하세요.
+            if(num == 100) {
+                document.write("true");
+            }   else {
+                document.write("false.");
+            }
+
+            (num == 100) ? document.write("true") : document.write("false");
+        }
+
+        // 06. switch문
+        {
+        const num = 100;
+
+            switch(num){
+                case 100 :
+                    document.write("실행되었습니다.(num==100)");
+                    break;
+                case 110 :
+                    document.write("실행되었습니다.(num==110)");
+                    break;
+                case 120 :
+                    document.write("실행되었습니다.(num==120)");
+                    break;
+                case 130 :
+                    document.write("실행되었습니다.(num==130)");
+                    break;
+                default :
+                    document.write("실행되었습니다.(num==값이 없음)");
+            }
+        }
+        
+        // 07. while문(반복문)
+        {
+            let num = 1;
+
+            while(num <= 5){
+                document.write("실행되었습니다.");
+                num++;
+            }
+        }
+
+        // 08. do while문(반복문)
+        {
+            let num = 1;
+
+            do {
+                document.write("실행되었습니다2.");
+                num++;
+            } while (num <= 5);
+        }
+
+        // 09. for문
+        {
+            for(let i=1; i<100; i++){
+                document.write(i+".실행되었습니다.")
+            }
+        }
+
+        // 10.중첩 for문
+        {
+            for(let i=1; i<=2; i++){
+                document.write(i + "실행");
+                for(let j=1; j<=5; j++){
+                    document.write(j + "실행");
+                }
+            }
+        }
+    </script>
 </body>
 </html>
