--- a/javascript/study/function.html
+++ b/javascript/study/function.html
@@ -75,32 +75,31 @@
             </ul>
         </div>
         <div class="document">
-
             <h2 class="t_tit">함수</h2>
             <p class="t_desc">
                 함수는 프로그램에서 반복적으로 사용되는 기능을 만들어 내기 위한 코드들의 집합
             </p>
             <table class="t_table">
-            <thead>
-                <tr>
-                    <th class="ce">분류</th>
-                    <th class="ce">종류</th>
-                    <th class="ce">설명</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="ce">사용자 정의 함수</td>
-                    <td>1. 선언적 함수<br>2. 익명 함수</td>
-                    <td>프로그램에서 필요한 기능을 사용자가<br>직접 정의해서 사용하는 함수</td>
-                </tr>
-                <tr>
-                    <td class="ce">내장 함수</td>
-                    <td>1. 안코딩, 디코딩 함수<br>2. 숫자 판별 함수<br>3.유 무한 값 판별 함수<br>4. 숫자변환 함수<br>5. 문자 변환 함수<br>6. 자바스크립트 코드 변경 함수</td>
-                    <td>프로그램 개발에서 자주 사용되는 기능들을<br>자바스크립트 내부적으로 제공해주는<br>함수입니다.</td>
-                </tr>
-            </tbody>
-        </table><br>
+                <thead>
+                    <tr>
+                        <th class="ce">분류</th>
+                        <th class="ce">종류</th>
+                        <th class="ce">설명</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="ce">사용자 정의 함수</td>
+                        <td>1. 선언적 함수<br>2. 익명 함수</td>
+                        <td>프로그램에서 필요한 기능을 사용자가<br>직접 정의해서 사용하는 함수</td>
+                    </tr>
+                    <tr>
+                        <td class="ce">내장 함수</td>
+                        <td>1. 안코딩, 디코딩 함수<br>2. 숫자 판별 함수<br>3. 유 무한 값 판별 함수<br>4. 숫자변환 함수<br>5. 문자 변환 함수<br>6. 자바스크립트 코드 변경 함수</td>
+                        <td>프로그램 개발에서 자주 사용되는 기능들을<br>자바스크립트 내부적으로 제공해주는<br>함수입니다.</td>
+                    </tr>
+                </tbody>
+            </table><br>
 
         <hr>
 
@@ -195,7 +194,7 @@
             <!-- 05 -->
             <div id="sample05" class="sample">
                 <h3 class="t_tit2">화살표 함수</h3>
-                <p class="t_tit3">선언적 함수 축약형 func 약식으로 사용
+                <p class="t_tit3">선언적 함수를 예시로 들며, 축약형 func 약식으로 사용
                 </p><br>
                 <div class="t_code">
 <pre><code class="language.js">    func = () => {
