--- a/test.html
+++ b/test.html
@@ -6,188 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
     <style>
-        table {
-            width: 100%;
-            border : 1px solid #000;
+        * {
+            width: 0;
+            padding: 0;
         }
-        table td {
-            border : 1px solid #000;
+        body {
+            background-color: rgb(185, 212, 247);
+        } 
+        #wrap {
+            width: 1200px;
+            margin: 0 auto;
+        }
+        #header {
+            margin: 100%;
+            height: 100px;
+            background-color: rgb(137, 175, 224);
+        }
+        #nav {
+            width: 100%;
+            height: 100px;
+            background-color: rgb(105, 137, 179);
+        }
+        #main {
+            display: flex;
+        }
+        #aside {
+            width: 30%;
+            height: 780px;
+            background-color: rgb(81, 122, 175);
+        }
+        #section {
+            width: 40%;
+            height: 780px;
+            background-color: rgb(45, 84, 134);
+        }
+        #article {
+            width: 30%;
+            height: 780px;
+            background-color: rgb(52, 65, 82);
+        }   
+        #footer {
+            width: 100%;
+            height: 100px;
+            background-color: rgb(78, 90, 104);
         }
     </style>
 </head>
 <body>
-        <!-- <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table>
-         <table>
-            <tr>
-                <td>1<td>
-                <td>2<td>
-                <td>3<td>
-                <td>4<td>
-                <td>5<td>
-                <td>6<td>
-                <td>7<td>
-                <td>8<td>
-                <td>9<td>
-                <td>10<td>
-            </tr>
-         </table> -->
-    <script>
-        let box = 10;
-        let box2 = 5;
-        let table = "<table>";
-
-            for(let i=0; i<10; i++){
-                table += "<tr>"
-
-                for(let j=0; j<10; j++){
-                    table += "<td>1</td>"
-                }
-
-                table += "</tr>"
-            }
-
-            table += "</table>";
-
-        document.write(table);
-    </script>
+    <div id=wrap>
+        <div id="header"></div>
+        <div id="nav"></div>
+        <div id="main"></div>
+            <div id="aside"></div>
+            <div id="section"></div>
+            <div id="article"></div>
+        <div id="footer"></div>
+    </div>
 </body>
 </html>
