--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -35,6 +35,7 @@
                 <li><a href="study/if.html">조건문</a></li>
                 <li><a href="study/type.html">데이터 타입</a></li>
                 <li><a href="study/function.html">함수</a></li>
+                <li><a href="study/var.html">지역변수/전역변수</a></li>
             </ul>
         </nav>
     </header>
@@ -61,12 +62,12 @@
         <div class="main_sample">
             <!-- 01 -->
             <div id="sample01" class="sample">
-                <h3>if문</h3>
-                <p>1</p>
+                <h3>01. if문</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    if(0){
         document.write("실행되었습니다(true).");
-    }   else {
+    } else {
         document.write("실행되었습니다(false).");
     }
 </code></pre>
@@ -84,8 +85,8 @@
 
             <!-- 02 -->
             <div id="sample02" class="sample">
-                <h3>if문 생략</h3>
-                <p>2</p>
+                <h3>02. if문 생략</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    const num = 100;
 
@@ -106,8 +107,8 @@
 
             <!-- 03 -->
             <div id="sample03" class="sample">
-                <h3>다중 if문</h3>
-                <p>3</p>
+                <h3>03. 중 if문</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    const num = 100;
 
@@ -137,8 +138,8 @@
 
             <!-- 04 -->
             <div id="sample04" class="sample">
-                <h3>중첩 if문</h3>
-                <p>4</p>
+                <h3>04. 중첩 if문</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    const num = 100;
 
@@ -170,8 +171,8 @@
 
             <!-- 05 -->
             <div id="sample05" class="sample">
-                <h3>삼향 연산자</h3>
-                <p>5</p>
+                <h3>05. 삼향 연산자</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    if(num == 100) {
         document.write("true");
@@ -195,8 +196,8 @@
 
             <!-- 06 -->
             <div id="sample06" class="sample">
-                <h3>switch문</h3>
-                <p>6</p>
+                <h3>06. switch문</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    const num = 100;
 
@@ -231,8 +232,8 @@
 
             <!-- 07 -->
             <div id="sample07" class="sample">
-                <h3>while문</h3>
-                <p>7</p>
+                <h3>07. while문</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    let num = 1;
 
@@ -259,8 +260,8 @@
 
             <!-- 08 -->
             <div id="sample08" class="sample">
-                <h3>do while문</h3>
-                <p>8</p>
+                <h3>08. do while문</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    let num = 1;
 
@@ -287,7 +288,7 @@
 
             <!-- 09 -->
             <div id="sample09" class="sample">
-                <h3>for문</h3>
+                <h3>09. for문</h3>
                 <p></p>
                 <div class="script">
 <pre><code class="language.js">    for(let i=1; i&lt;10; i++){
@@ -317,8 +318,8 @@
 
             <!-- 10 -->
             <div id="sample10" class="sample">
-                <h3>중첩 for문</h3>
-                <p>10</p>
+                <h3>10. 중첩 for문</h3>
+                <p></p>
                 <div class="script">
 <pre><code class="language.js">    for(let i=1; i&lt;=2; i++){
         document.write(i + "실행");
@@ -351,6 +352,54 @@
                 </div>
             </div>
 
+            <!-- 11 -->
+            <div id="sample11" class="sample">
+                <h3>11. break문</h3>
+                <p></p>
+                <div class="script">
+<pre><code class="language.js">    for(i=1; i&lt;=20; i++){
+        document.write(i);
+        if(i === 10){   // = 우변을 왼쪽으로 // == 같다 // == 유전자를 확인 
+            break;                
+        }
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample11_result">
+                            12345678910
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 12 -->
+            <div id="sample12" class="sample">
+                <h3>12. contiune문</h3>
+                <p></p>
+                <div class="script">
+<pre><code class="language.js">    for(i=1; i&lt;=20; i++){
+        if(i === 10){    // = 우변을 왼쪽으로 // == 같다 // == 유전자를 확인 
+            contiune;   //해당하는 입력 값만 삭제
+        }
+        document.write(i);
+    }
+</code></pre>
+                </div>
+
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample12_result">
+                            123456789
+                        </div>
+                    </details>
+                </div>
+            </div>
+
         </div>
     </main>
     <!-- //main -->
@@ -366,11 +415,11 @@
         // (제어문 : 조건문, 반복, 중지, 건너뛰기)
         // 01. if문  
         // {
-        //     // false, 0, undefined, null 
+        //     // false, 0, undefined, null, ""
         //     // true, 1, "0", "1", 0<10, []배열, {}객체
         //     if(0){
         //         document.write("실행되었습니다(true).");
-        //     }   else {
+        //     } else {
         //         document.write("실행되었습니다(false).");
         //     }
         // }
@@ -469,6 +518,26 @@
         //             for(let j=1; j<=5; j++){
         //                 document.write(j + "실행");
         //         }
+        //     }
+        // }
+
+        // // 11. break문
+        // {
+        //     for(i=1; i<=20; i++){
+        //         document.write(i);
+        //         if(i === 10){ // = 우변을 왼쪽으로 // == 같다 // == 유전자를 확인 
+        //             break;                
+        //         }
+        //     }
+        // }
+
+        // // 12.contiune문
+        // {
+        //     for(i=1; i<=20; i++){
+        //         if(i === 10){ // = 우변을 왼쪽으로 // == 같다 // == 유전자를 확인 
+        //             contiune; //해당하는 입력 값만 삭제
+        //         }
+        //         document.write(i);
         //     }
         // }
     </script>
