--- a/html/index.html
+++ b/html/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
-    <link href="https://webfontworld.github.io/NanumSquareRound/NanumSquareRound.css" rel="stylesheet">
+    <link href="https://webfontworld.github.io/score/SCoreDream.css" rel="stylesheet">
     <style>
         /* 리셋 */
         * {
             margin: 0;
             padding: 0;
-            font-family: 'NanumSquareRound';
+            font-family: 'SCoreDream';
         }
         #main {
             display: flex;
@@ -27,7 +27,7 @@
             font-size: 8vw;
             text-align: center;
             line-height: 1.3;
-            font-weight: normal;
+            font-weight: 500;
             color: #13443b;
             margin-bottom: 4vw;
         }
